syntax = "proto3";

option go_package = ".";

package pb;

service MyService {
  rpc MyMethod(Request) returns (Response);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc CreateUserWithOtp(CreateUserWithOtpRequest) returns(CreateUserWithOtpResponse) {}
  rpc SignupOtpValidation(OtpValidationRequest)returns(OtpValidationResponse) {}
  rpc LoginWithOtp(LoginWithOtpRequest)returns(LoginWithOtpResponse){}
  rpc LoginOtpValidation(OtpValidationRequest)returns(LoginOtpValidationResponse){}
  rpc LoginWithPassword(LoginWithPasswordRequest)returns(LoginWithPasswordResponse){}
  rpc RegisterAdmin(RegisterAdminRequest)returns(RegisterAdminResponse){}
  rpc AdminLoginWithPassword(LoginWithPasswordRequest)returns(LoginWithPasswordResponse){}
}


service AdminDashboard{
  rpc MyMethod(Request) returns (Response);
  rpc UserList(UserListRequest) returns (UserListResponse){}
  rpc SortUserByPermission(SortUserRequest) returns(SortUserResponse){}
  rpc SearchUserByname(SearchUserBynameRequest) returns (SearchUserBynameResponse){}
  rpc SearchUserByid(SearchUserByidRequest) returns(SearchUserByidResponse){}
  rpc TogglePermission(TogglePermissionRequest) returns (TogglePermissionResponse){}
  rpc CreateApparel(CreateApparelRequest)returns(CreateApparelResponse){}
  rpc EditApparel(EditApparelResquest)returns(EditApparelResponse){}
  rpc DeleteApparel(DeleteApparelRequest)returns(DeleteApparelResponse){}
  rpc AddCoupon(AddCouponRequest)returns(AddCouponResponse){}
  rpc AddOffer(AddOfferRequest)returns(AddOfferResponse){}
}


message Request {
  string data = 1;
}

message Response {
  string result = 1;
}


message CreateUserRequest {
  string firstname = 1;
  string lastname  = 2;
  string email     = 3;
  string phone     = 4;
  string password  = 5;
}

message CreateUserResponse {
  string firstname = 1;
  string email     = 2;
  string result    = 3;
}

message CreateUserWithOtpRequest{
  string firstname = 1;
  string lastname  = 2;
  string email     = 3;
  string phone     = 4;
  string password  = 5;
}

message CreateUserWithOtpResponse{
    string phone = 1;
    string key   = 2;
    string result= 3;
}

message OtpValidationRequest{
    string key = 1;
    string otp = 2;
}

message OtpValidationResponse{
    string result = 1;
}

message LoginWithOtpRequest{
    string phone = 1;
}

message LoginWithOtpResponse{
    string key    = 1;
    string result = 2;
    string phone  = 3;
}

message LoginOtpValidationResponse{
    int32 userid = 1;
    string result = 2;
}

message LoginWithPasswordRequest{
    string phone = 1;
    string password = 2;
}

message LoginWithPasswordResponse{
    int32 userid = 1;
    string result = 2;
}

message RegisterAdminRequest{
   string adminname = 1;
   string email     = 2;
   string phone     = 3;
   string password  = 4;
   string role      = 5;
}

message RegisterAdminResponse{
    int32 userid = 1;
    string result = 2;
}

message UserListRequest{
  int32 page  = 1;
  int32 limit = 2;
}

message UserListResponse {
  repeated User users = 1;
}

message User {
  int32 id = 1;
  string firstname = 2;
  string lastname = 3;
  string email = 4;
  string phone = 5;
  int32 wallet = 6;
  bool permission = 7;
}

message SortUserRequest{
  int32 page      = 1;
  int32 limit     = 2;
  string permission = 3;
}

message SortUserResponse{
 repeated User users = 1;
}

message SearchUserBynameRequest{
 string name   = 1;
}

message SearchUserBynameResponse{
  repeated User users = 1;
}

message SearchUserByidRequest{
  int32  userid = 2;
}

message SearchUserByidResponse{
  repeated User users = 1;
}

message TogglePermissionRequest{
  int32 userid = 1;
}

message TogglePermissionResponse{
  string result = 1;
}

message CreateApparelRequest{
  string name  = 1;
  int32  price = 2;
  string image = 3;
  string category = 4;
  string subcategory = 5;
  int32  adminid     = 6;
}

message CreateApparelResponse{
  string result = 1;
}

message EditApparelResquest{
  string name  = 1;
  int32  price = 2;
  string image = 3;
  string category = 4;
  string subcategory = 5;
  int32  id    = 6;
  int32  adminid     = 7;
}

message EditApparelResponse{
 string result = 1;
}

message DeleteApparelRequest{
 int32 id = 1;
}

message DeleteApparelResponse{
 string result = 1;
}

message AddCouponRequest{
 string code     = 1;
 string type     = 2;
 int32  amount   = 3;
 int32  limit    = 4;
 string category = 5;
}

message AddCouponResponse{
 string result = 1;
}

message AddOfferRequest{
 string code     = 1;
 string type     = 2;
 int32  amount   = 3;
 int32  limit    = 4;
 int32  minprice = 5;
 string category = 6;
}

message AddOfferResponse{
string result = 1;
}